Revert "Fixed tables to scroll properly on mobile"
This reverts commit 34d188bdc18dab82da8f5fa53f454f0c4565f8b0.

--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -204,18 +204,17 @@ b{
 
 table {
     border: 1px solid #bbb;
-    width: 100%;
+    width: 110%;
     height: 30%;
     align-items: center;
     margin: auto;
     overflow-y: scroll;
-    padding: 2px;
 }
 
 .table-container {
     width: 90%;
     min-height: 50px;
-    max-height: 500px;
+    max-height: 100px;
     padding: 0 10px 10px 10px;
     overflow-y: scroll;
 }
@@ -248,7 +247,6 @@ td {
 @media only screen and (max-width: 600px){
     .App{
         overflow-y: auto;
-        overflow-x: auto;
     }
     .login-container,.register-container{
         flex-direction: column;
@@ -269,7 +267,7 @@ td {
         font-size: 14px;
     }
 
-    .taskcreator-container, .taskviewer-container{
+    .taskcreator-container{
         height: 100vh;
         margin: 30px;
     }
@@ -285,14 +283,13 @@ td {
     }
     table {
         border-collapse: collapse;
-       
+        border-spacing: 0;
         
     }
     
     .table-container {
-        width:90%;
-        overflow-x: auto;
-        -webkit-overflow-scrolling: touch;
-        
+    overflow-x: scroll;
+    -webkit-overflow-scrolling: touch;
+    padding: 0 1px 1px 1px;
     }
 }
